eip.tf
/* resource "aws_eip" "myeip" {
  vpc = true

  tags = {
    Name = "my-eip"
  }
} */
